--- a/.gitignore
+++ b/.gitignore
@@ -1,14 +1,9 @@
-.gradle
-/build/
+.gradle/
+.idea/
+*.iml
 
-# Ignore Gradle GUI config
-gradle-app.setting
 
-# Avoid ignoring Gradle wrapper jar file (.jar files are usually ignored)
-!gradle-wrapper.jar
+build/
+out/
 
-# Cache of project
-.gradletasknamecache
 
-# # Work around https://youtrack.jetbrains.com/issue/IDEA-116898
-# gradle/wrapper/gradle-wrapper.properties
